package br.gov.sp.fatec.domain.enums;

public enum AluguelStatus {
    PENDENTE,
    ATIVO,
    FINALIZADO
}
