package br.gov.sp.fatec.domain.enums;

public enum CarroStatus {
    DISPONIVEL,
    ALUGADO,
    MANUTENCAO
}
